objects/IndividualApplication.object
<CustomObject>
    <fields>
        <fullName>Boat_Length__c</fullName>
        <label>Boat Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_vs_Requested_Amount__c</fullName>
        <formula>Total_Budget__c - RequestedAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget vs Requested Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Contact_Match__c</fullName>
        <formula>CreatedBy.Id =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Contact Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Golden_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDOApplying_Contact_Info_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applying Contact Info Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDOApplying_Organization_Info_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applying Organization Info Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDOFunding_Organization_Name__c</fullName>
        <formula>FundingOpportunity.Funding_Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDOProject_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDOProject_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDOProject_Title__c</fullName>
        <label>Project Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDOProject_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction Project</fullName>
                </value>
                <value>
                    <fullName>Non-Construction Project</fullName>
                </value>
                <value>
                    <fullName>Transit Oriented Development</fullName>
                </value>
                <value>
                    <fullName>Integrated Community Project</fullName>
                </value>
                <value>
                    <fullName>Rural Innovation Project</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Development</fullName>
                </value>
                <value>
                    <fullName>Housing Related Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Sustainable Transportation Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Transportation-Related Amenities</fullName>
                </value>
                <value>
                    <fullName>Program Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_Model__c</fullName>
        <label>Make/Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Boat__c</fullName>
        <label>Name of Boat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Agency__c</fullName>
        <label>Previous Agency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_End__c</fullName>
        <label>Previous End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Foster_Parent_State__c</fullName>
        <label>Previous Foster Parent State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Foster_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Foster Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Start__c</fullName>
        <label>Previous Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicSector__AccessReason__c</fullName>
        <label>Reason for Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Shift Work</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__AdditionalLocationDetails__c</fullName>
        <description>Additional location details for which the access is requested</description>
        <label>Additional Location Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__BusinessOrOccupationRole__c</fullName>
        <description>Business or Occupation Role</description>
        <label>Business or Occupation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airline Operations</fullName>
                </value>
                <value>
                    <fullName>Border Protection and Transportation Security</fullName>
                </value>
                <value>
                    <fullName>Business Traveler</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Correctional Facility Operations</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>Emergency Response and Public Safety</fullName>
                </value>
                <value>
                    <fullName>Environmental or Janitorial  Services</fullName>
                </value>
                <value>
                    <fullName>Farmworker</fullName>
                </value>
                <value>
                    <fullName>Food Preparation</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>In-Home Repair Services</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Meat and Poultry Processing</fullName>
                </value>
                <value>
                    <fullName>Office Worker</fullName>
                </value>
                <value>
                    <fullName>Postmortem Care</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Solid Waste or Wastewater Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__Details__c</fullName>
        <label>Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicSector__FrequencyofAccess__c</fullName>
        <label>Frequency of Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Visit</fullName>
                </value>
                <value>
                    <fullName>Ongoing Shift Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__LocationAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Individual Applications</relationshipLabel>
        <relationshipName>Individual_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicSector__LocationContactName__c</fullName>
        <label>Location Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__LocationContactPhone__c</fullName>
        <label>Location Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublicSector__LocationContactTitle__c</fullName>
        <label>Location Contact Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__OrganizationName__c</fullName>
        <description>Name of the organization</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__Role__c</fullName>
        <description>Role of the applicant</description>
        <inlineHelpText>Role of the applicant</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Questions_Comments__c</fullName>
        <label>Questions/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Community Event</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>Budget.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Care__c</fullName>
        <label>Type of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relative Care</fullName>
                </value>
                <value>
                    <fullName>Adoptive Care</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Fuel_Used__c</fullName>
        <label>Type of Fuel Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_License__c</fullName>
        <label>Type of License</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Therapuetic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Interested__c</fullName>
        <label>Interest Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gps_Hull_ID_Number__c</fullName>
        <label>Hull ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_IndividualApplications</fullName>
        <filterScope>Everything</filterScope>
        <label>All Individual Applications</label>
    </listViews>
    <listViews>
        <fullName>Benefits_Individual_Applications</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>IndividualApplication.Benefits</value>
        </filters>
        <label>Benefits Individual Applications</label>
    </listViews>
    <listViews>
        <fullName>GPS_Application_Reviewers_IndividualApplication</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>LicenseType</columns>
        <columns>AppliedDate</columns>
        <columns>Status</columns>
        <filterScope>Queue</filterScope>
        <label>Application Reviewers</label>
        <queue>GPS_Application_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Grant_Applications</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <columns>InternalStatus</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>IndividualApplication.Grantmaking</value>
        </filters>
        <label>Grant Applications</label>
    </listViews>
    <listViews>
        <fullName>Heating_Assistance</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LicenseType</field>
            <operation>equals</operation>
            <value>Heating Assistance</value>
        </filters>
        <label>Heating Assistance</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Individual_Applications</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <label>My Individual Applications</label>
    </listViews>
    <listViews>
        <fullName>New_Grant_Applications</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>IndividualApplication.Grantmaking</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Interest,In Progress,Submitted</value>
        </filters>
        <label>New Grant Applications</label>
    </listViews>
    <listViews>
        <fullName>Returned Individual Applications</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WasReturned</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Returned Individual Applications</label>
    </listViews>
    <listViews>
        <fullName>Submitted Individual Applications</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WasReturned</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted Individual Applications</label>
    </listViews>
    <listViews>
        <fullName>gps_Emergency_Requests</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>AppliedDate</columns>
        <columns>LicenseType</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>IndividualApplication.PublicSector__Emergency_Request</value>
        </filters>
        <label>Emergency Requests</label>
    </listViews>
    <recordTypes>
        <fullName>Benefits</fullName>
        <active>true</active>
        <description>For Benefits Assignments ex (Heating Assistance)</description>
        <label>Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantmaking</fullName>
        <active>true</active>
        <label>Grantmaking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Application</fullName>
        <active>true</active>
        <description>For LPI related IAs</description>
        <label>Individual Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Emergency_Request</fullName>
        <active>true</active>
        <label>Emergency Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Location_Access_Permit_Request</fullName>
        <active>false</active>
        <label>Location Access Permit Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Training_Certificate</fullName>
        <active>true</active>
        <label>Training Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Insurance</fullName>
        <active>true</active>
        <label>Social Insurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>